roks/APPS/go-grpc.112/all.1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grpc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server
    spec:
      containers:
      - name: grpc-server
        image: niklaushirt/grpc-server:1.0.0
        imagePullPolicy: IfNotPresent 
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-server-service
spec:
  selector:
    app: grpc-server
  ports:
    - protocol: TCP
      port: 50061
      targetPort: 50061
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grpc-server-route
  labels:
    app: grpc-server
spec:
  host: grpc-server-service-default.apps.94.23.25.93.nip.io
  to:
    kind: Service
    name: grpc-server-service
    weight: 100
  wildcardPolicy: None
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grpc-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-api
  template:
    metadata:
      labels:
        app: grpc-api
    spec:
      containers:
      - name: grpc-api
        image: niklaushirt/grpc-api:1.0.0
        imagePullPolicy: IfNotPresent 
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-api-service
spec:
  selector:
    app: grpc-api
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  type: ClusterIP
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: grpc-api-route
  labels:
    app: grpc-api
spec:
  host: grpc-api-service-default.apps.94.23.25.93.nip.io
  to:
    kind: Service
    name: grpc-api-service
    weight: 100
  wildcardPolicy: None
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grpc-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-web
  template:
    metadata:
      labels:
        app: grpc-web
    spec:
      containers:
      - name: grpc-web
        image: niklaushirt/grpc-web:1.0.0
        imagePullPolicy: IfNotPresent 
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-web-service
spec:
  selector:
    app: grpc-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: grpc-web-route
  labels:
    app: grpc-web
spec:
  host: grpc-web-service-default.apps.94.23.25.93.nip.io
  to:
    kind: Service
    name: grpc-web-service
    weight: 100
  wildcardPolicy: None
